<resources>
    <string name="settings_title">Settings</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_theme_follow_system">Follow system</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_save_failed">Couldn\'t save your choice. Try again.</string>
</resources>
